# gabi-kimi

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTES_SPRINT1_WAVE1.md  AGENTS.md  ANSWER_PIPELINE_PLAN.md  ARCHITECTURE_DIAGRAMS.md  AUTOMATION_README.md  CAF_GAP_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CODEX-ELASTIC-PLAN.MD  CODEX-PLAN-REDIS.md  COMPARISON_SUMMARY.md  COMPLETE_IMPLEMENTATION.md  CONTRACTS_CHECKPOINT.md  CURRENT_STATE_ASSESSMENT.md  DISCOVERY_SOLUTION_VERIFICATION.md  DOCKER.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.qwen-embed  EXPERIMENTAL_IMPLEMENTATION_PLAN.md  FIELD_INVENTORY.md  GABI_DOU_TimeSeries_Concepts.html  GEMINI.MD  GEMINI.md  GabiSync.sln  HANDOVER.md  HANDOVER_PLAN.md  HANDOVER_opus.md  IMPLEMENTACAO_COMPLETA.md  IMPLEMENTATION_SUMMARY.md  INLABS_AUTH_REPORT.md  INLABS_LEITURAJORNAL_COMPARISON_REPORT.md  LANDING_BLUEPRINT_HIFI.md  LEITURAJORNAL_BOUNDARY_REPORT.md  LEITURAJORNAL_RATE_LIMIT_ANALYSIS_REPORT.md  (+129 more)
.antigravity/: 02_GATES.md  CICD.md  CONTRACTS.md  DOCKER_INFRA.md  INVARIANTS.md  OBSERVABILITY.md
.cursor/: REVISAO_CODEX_VS_PLANOS.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
Gabi_OLD/: .gitignore  CLAUDE.md  Directory.Build.props  GEMINI.md  GabiSync.sln  HANDOVER.md  PLANO_CONSOLIDADO_V10.md  README.md  docker-compose.yml  env.example  fly.api.toml  gabi-kimi.code-workspace  glm5.md  sources_v2.yaml
agent_contracts/: phase1_listing_freeze.md
analysis/: LEITURAJORNAL_SPECIFICATION.md  USAGE_EXAMPLES.md  leiturajornal_parser.py  test_leiturajornal_parser.py
commitment/: anchor.py  chain.py  crss1.py  tree.py  verify.py
config/: pipeline_config.example.yaml  production.yaml
crawler/: dsl_schema.py  dsl_validator.py  memory_budget.py  user_agent_rotator.py
cross_validation_demo/: cross_source_report.json  metrics_inlabs.json  summary.md
cross_validation_report/: cross_source_report.json  metrics_leiturajornal.json  summary.md
cross_validation_report_sim/: cross_source_report.json  discrepancies.json  summary.md
data/: dou_catalog_registry.json
dbsync/: differ.py  dou_schema.sql  download_registry_schema.sql  executor.py  loader.py  planner.py  registry_ingest.py  registry_schema.sql  schema_sync.py
docker/: docker-compose.mcp-hybrid.yml  mcp-hybrid.Dockerfile
docs/: 2026-02-11-incremental-refactor-plan.md  CONTRIBUTING.md  CROSS_SOURCE_VALIDATION_README.md  DASHBOARD_API_CONTRACTS.md  DASHBOARD_API_EVALUATION.md  DATABASE_CONFIGURATION.md  DATABASE_MIGRATIONS.md  DATA_ANALYSIS_PLAN_2002.md  DB_APPLIANCE_OPERATOR_HANDBOOK.md  DEPLOY.md  GRAPHRAG_ARCHITECTURE.md  GRAPHRAG_SUMMARY.md  HYBRID_SEARCH_SUMMARY.md  INLabs_DOU_XML_Specification.md  INLabs_XML_Analysis_Summary.md  INTEGRATION_GUIDE.md  LIFERAY.md  MACHINE_TOOLING.md  MIGRATION_DOCUMENTS_TABLE.md  MONITORING_SUMMARY.md  RAG_14DAY_RUNBOOK.md  REINDEX_V2_DRYRUN_2002_01.md  REINDEX_V2_EXECUTION_PLAN.md  REINDEX_V2_FULL_FIELDS.md  REINDEX_V2_MINIMUM.md  REINDEX_V2_SEARCH_CANARY.md  TCU_EMBEDDING_DIMENSION_STRATEGY.md  TOPOLOGY.md  VALIDATION_TEST_RESULTS.md  VLM_INTEGRATION_STRATEGY.md  ZERO_KELVIN_RESULTADOS_POR_ESTAGIO.md  alert-rules.yaml  frontend-Dashboard-updated.tsx  frontend-api-dashboard.ts  frontend-api-index.ts  frontend-api-sources.ts  frontend-hooks-useDashboard.ts  frontend-hooks-useSources.ts  hybrid_search_architecture.md  mcp-setup.md  (+4 more)
examples/: mock_crawl.yaml
flyio/: AGENT8_SUMMARY.md  PRODUCTION_CHECKLIST.md  secrets.template.env
genui-chat-app/: package-lock.json
glm-auditor-mcp/: server.py
governance/: dead_code_report.md  full_project_assessment.md  phase_lock.md  refactor_plan.md  repo_classification.md  structural_risks.md
grounding_docs/: ARCHITECTURE_OVERVIEW.md  DAY_SPRINT.md  PLANEJAMENTO_GABI_SYNC_v2.md  kimi.md
harvest/: canonicalizer.py  date_selector.py  freezer.py
infra/: db_control.py  docker-compose.yml  infra_manager.py
ingest/: __init__.py  auto_discovery.py  bm25_indexer.py  bulk_pipeline.py  catalog_scraper.py  chunker.py  discovery_probe.py  dou_ingest.py  embedding_pipeline.py  es_indexer.py  html_extractor.py  media_backfill.py  multipart_merger.py  normalizer.py  orchestrator.py  sample_download.py  sync_pipeline.py  xml_parser.py  zip_downloader.py
inlabs_analysis/: INLABS_STRUCTURE_SUMMARY.json
inlabs_bulk/: STRATEGY.md  __init__.py  inlabs_client.py
inlabs_data/: manifest.json
k8s/: network-policies.yaml
kimi-auditor-mcp/: server.py
old_python_implementation/: CHANGELOG.md  INGESTION_PRODUCTION_PLAN.md  MCP_HYBRID_IMPLEMENTATION_SUMMARY.md  alembic.ini  codex_plan.md  data-governance-audit.skill  day_sprint.md  docker-compose.yml  docker-compose.yml_new_vol  download_model.py  gabi-production-transition.skill  mcp_migration.py  monitor_celery.sh  monitor_crashes.sh  monitor_ingestion.py  monitor_ingestion_v2.py  monitor_tei.sh  test_aiohttp_streaming.py  test_csv_parse.py  test_direct_sync.py  test_full_ingestion.py  test_httpx_minimal.py  test_indexing.py  test_streaming.py  test_streaming_fix.py  vision.md
ops/: audit_log.py  backup_to_icloud.py  baseline_search.py  check_db.py  diagnose_tcu_doc_id.py  download_local.py  embedding_poc.py  eval_h2_semantic_quality.py  eval_hybrid_analysis.md  eval_hybrid_report.md  eval_hybrid_results.json  eval_hybrid_search.py  eval_mcp_cases.json  eval_mcp_quality.py  export_for_sqlserver.py  export_h1_h2_samples.py  full_ingest_host.py  generate_data_catalog_html.py  migrate_tcu_raw_to_postgres.py  qwen_embed_server.py  rag_rollout_checks.py  reconcile_parsed_semantics.py  report_status.py  requirements-ingest.txt  requirements-repo-mcp.txt  requirements-reranker.txt  reranker_adapter.py  run_full_ingest.sh  run_h123_quality_cycle.sh  run_h123_sample_refresh.sh  run_h2_workers.py  run_tcu_csv_postgres_cron.sh  sample_dou_h1_dataset.py  serve_reranker.py  setup_elasticsearch.sh  test_answering.py  test_api_adversarial.py  test_dev_converge_tools.py  test_extraction.py  test_icloud_json.py  (+7 more)
output/: ._playwright
ppt/: GABI_vs_GABICHECKS.md  SPEAKER_CHEAT_SHEET.md  (+5 more)
(+2393 files in other folders)
