[project]
name = "gabi"
version = "0.1.0"
description = "GABI - Gerenciador de Análise de Base de Informações"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GABI Team"}
]
keywords = ["fastapi", "rag", "ai", "document-processing", "elasticsearch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Web Framework
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "starlette==0.36.3",
    
    # Database & ORM
    "sqlalchemy==2.0.28",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "pgvector==0.5.1",
    "psycopg2-binary==2.9.9",
    
    # Task Queue
    "celery==5.3.6",
    "redis==5.0.1",
    "kombu==5.3.5",
    
    # Search Engine
    "elasticsearch==8.11.0",
    "elastic-transport==8.12.0",
    
    # Data Validation & Settings
    "pydantic==2.6.3",
    "pydantic-settings==2.2.1",
    "email-validator==2.1.0.post1",
    
    # HTTP Client
    "httpx==0.27.0",
    "httpcore==1.0.4",
    "h11==0.14.0",
    
    # Document Processing
    "pdfplumber==0.11.0",
    "pypdfium2==4.27.0",
    "Pillow==10.2.0",
    
    # Browser Automation
    "playwright==1.41.2",
    "pyee==11.0.1",
    
    # Async Support
    "anyio==4.3.0",
    "aiofiles==23.2.1",
    
    # Utilities
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.1.2",
    "PyJWT==2.8.0",
    "cryptography==42.0.5",
    "tenacity==8.2.3",
    "orjson==3.9.15",
    "ujson==5.9.0",
    "typer==0.9.0",
    "rich==13.7.1",
    "click==8.1.7",
    "structlog==24.1.0",
    "colorama==0.4.6",
    
    # Validation & Parsing
    "typing-extensions==4.10.0",
    "annotated-types==0.6.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "idna==3.6",
    "urllib3==2.2.1",
    
    # Date/Time
    "python-dateutil==2.9.0",
    "pytz==2024.1",
    "tzlocal==5.2",
    
    # Security
    "e1839a8==1.0.0",  # workaround for some packages
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.0.2",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pytest-xdist==3.5.0",
    "pytest-timeout==2.2.0",
    "factory-boy==3.3.0",
    "faker==23.3.1",
    "responses==0.25.0",
    "respx==0.21.1",
    "httpx==0.27.0",
    "asgi-lifespan==2.1.0",
    
    # Linting & Formatting
    "ruff==0.3.2",
    
    # Type Checking
    "mypy==1.8.0",
    "types-python-dateutil==2.8.19.20240106",
    "types-pytz==2024.1.0.20240203",
    "types-PyYAML==6.0.12.12",
    "types-redis==4.6.0.20240106",
    "types-requests==2.31.0.20240218",
    "types-passlib==1.7.7.20240106",
    "mypy-extensions==1.0.0",
    
    # Documentation
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.13",
    "mkdocstrings[python]==0.24.1",
    
    # Jupyter (for prototyping)
    "jupyter==1.0.0",
    "ipython==8.22.2",
    "notebook==7.1.1",
    
    # Debugging
    "ipdb==0.13.13",
    "pdbpp==0.10.3",
    "icecream==2.1.3",
    
    # Pre-commit
    "pre-commit==3.6.2",
    "cfgv==3.4.0",
    "identify==2.5.35",
    "nodeenv==1.8.0",
    "pyyaml==6.0.1",
    "virtualenv==20.25.1",
]

[project.scripts]
gabi = "gabi.cli:main"

[project.urls]
Homepage = "https://github.com/gabi/gabi"
Documentation = "https://gabi.readthedocs.io"
Repository = "https://github.com/gabi/gabi"
Issues = "https://github.com/gabi/gabi/issues"

[build-system]
requires = ["setuptools>=69.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["gabi*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
gabi = ["py.typed"]

# =============================================================================
# RUFF - Linter e Formatter
# =============================================================================
[tool.ruff]
target-version = "py311"  # Python 3.11+
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # Pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
    "C90", # mccabe complexity
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "E501",  # Line too long (handled by formatter)
    "PGH003",# Use specific rule codes when ignoring type issues
    "PLR0913",# Too many arguments
    "PLR2004",# Magic value used in comparison
    "TRY003",# Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["gabi"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["D", "ARG", "PLR2004", "S101"]
"**/migrations/*.py" = ["D"]

# =============================================================================
# MYPY - Type Checking
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_traceback = false
ignore_missing_imports = true
follow_imports = "normal"
namespace_packages = true
explicit_package_bases = true
mypy_path = ["."]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "elasticsearch.*",
    "pdfplumber.*",
    "playwright.*",
    "pgvector.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

# =============================================================================
# PYTEST - Testing Configuration
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--cov=gabi",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
    "--no-cov-on-fail",
    "-n=auto",
    "--timeout=300",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (requires services)",
    "e2e: End-to-end tests (full stack)",
    "slow: Slow tests",
    "skip_ci: Tests to skip in CI",
    "elasticsearch: Tests requiring Elasticsearch",
    "redis: Tests requiring Redis",
    "postgres: Tests requiring PostgreSQL",
    "celery: Tests requiring Celery",
    "playwright: Tests requiring Playwright",
]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources.*",
    "ignore::UserWarning:pydantic.*",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["gabi"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/alembic/*",
    "gabi/__main__.py",
    "gabi/cli.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# OUTRAS CONFIGURAÇÕES
# =============================================================================
[tool.pyupgrade]
keep_runtime_typing = true

[tool.bandit]
exclude_dirs = ["tests", "migrations", "scripts"]
skips = ["B101", "B601"]

[tool.vulture]
min_confidence = 80
paths = ["gabi"]
exclude = ["tests", "migrations", "scripts"]
