[project]
name = "gabi"
version = "0.1.0"
description = "GABI - Gerador Automático de Boletins por Inteligência Artificial"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "GABI Team"}
]
keywords = ["fastapi", "rag", "ai", "document-processing", "elasticsearch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    
    # Database & ORM
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    
    # Task Queue
    "celery>=5.3.0",
    "redis>=5.0.0",
    
    # Search Engine
    "elasticsearch>=8.11.0,<8.12.0",
    
    # Data Validation & Settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    
    # HTTP Client
    "httpx>=0.27.0",
    
    # Document Processing
    "pdfplumber>=0.11.0",
    
    # Browser Automation
    "playwright>=1.41.0",
    
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.8.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-timeout>=2.2.0",
    "factory-boy>=3.3.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "types-redis",
    "types-python-jose",
    "types-passlib",
    "httpx>=0.27.0",
]

[project.scripts]
gabi = "gabi.cli:main"

[build-system]
requires = ["setuptools>=69.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["gabi/src"]
include = ["gabi*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
gabi = ["py.typed"]

# =============================================================================
# RUFF - Linter e Formatter
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # Ruff-specific rules
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
    "D103",  # Missing docstring in public function ( Wave 1 - focus on functionality)
    "D105",  # Missing docstring in magic method
    "D415",  # First line should end with period
    "N818",  # Exception name should end with Error
    "RUF022",  # __all__ not sorted
    "TRY003",  # Long messages outside exception class
    "TRY400",  # Use logging.exception
    "PLW0602", # Using global but no assignment
    "PLW0603", # Global statement discouraged
    "ARG001",  # Unused function argument
    "ERA001",  # Commented-out code
    "UP042",   # Class inherits from both str and enum
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MYPY - Type Checker
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
ignore_missing_imports = true

# =============================================================================
# PYTEST
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["gabi/tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
pythonpath = ["gabi/src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow tests",
    "requires_db: Tests requiring database",
    "requires_es: Tests requiring Elasticsearch",
    "requires_redis: Tests requiring Redis",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["gabi/src/gabi"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 70
