# =============================================================================
# GABI - Gerador Automático de Boletins por Inteligência Artificial
# pyproject.toml - Configuração do Projeto
# =============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gabi"
version = "2.1.0"
description = "Gerador Automático de Boletins por Inteligência Artificial - TCU"
readme = "README.md"
license = {text = "Proprietary - TCU Internal Use Only"}
authors = [
    {name = "TCU - Tribunal de Contas da União", email = "ti@tcu.gov.br"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Internal",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Legal :: Legal Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"

# Core dependencies from Section 2.4 Stack
dependencies = [
    # Web Framework
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    
    # Database
    "sqlalchemy[asyncio]==2.0.28",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "pgvector==0.4.2",
    
    # Task Queue
    "celery==5.3.6",
    "redis==5.0.1",
    "flower==2.0.1",
    
    # Elasticsearch
    "elasticsearch[async]==8.11.0",
    
    # HTTP Client
    "httpx==0.27.0",
    "httpx-socks==0.9.0",
    
    # Data Validation
    "pydantic==2.6.3",
    "pydantic-settings==2.1.0",
    "email-validator==2.1.0.post1",
    
    # Authentication
    "python-jose[cryptography]==3.3.0",
    "PyJWT==2.8.0",
    "python-multipart==0.0.9",
    
    # Crawling & Parsing
    "playwright==1.41.2",
    "beautifulsoup4==4.12.3",
    "lxml==5.1.0",
    "html5lib==1.1",
    
    # PDF Processing
    "pdfplumber==0.11.0",
    "pymupdf==1.24.10",
    "pypdf==4.0.2",
    
    # Data Processing
    "pandas==2.2.1",
    "polars==0.20.10",
    "pyarrow==15.0.0",
    "openpyxl==3.1.2",
    "python-magic==0.4.27",
    
    # Utilities
    "python-dotenv==1.0.1",
    "typer==0.9.0",
    "rich==13.7.0",
    "structlog==24.1.0",
    "orjson==3.9.15",
    "ujson==5.9.0",
    "tenacity==8.2.3",
    "backoff==2.2.1",
    
    # Observability
    "prometheus-client==0.19.0",
    "prometheus-fastapi-instrumentator==6.1.0",
    "opentelemetry-api==1.22.0",
    "opentelemetry-sdk==1.22.0",
    "opentelemetry-instrumentation-fastapi==1.22.0",
    "opentelemetry-exporter-prometheus==1.22.0",
    
    # Security
    "bcrypt==4.1.3",
    "passlib[bcrypt]==1.7.4",
    "cryptography==43.0.0",
    "itsdangerous==2.1.2",
    
    # Text Processing
    "nltk==3.8.1",
    "spacy==3.7.4",
    "langdetect==1.0.9",
    "unidecode==1.3.8",
    
    # YAML
    "PyYAML==6.0.1",
    "ruamel.yaml==0.18.6",
    
    # Async Utilities
    "aiocache==0.12.2",
    "aiofiles==23.2.1",
    "aiosqlite==0.20.0",
    "asyncio-mqtt==0.16.1",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest==8.0.2",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.5.0",
    "pytest-mock==3.12.0",
    "pytest-timeout==2.2.0",
    "pytest-randomly==3.15.0",
    "pytest-clarity==1.0.1",
    "factory-boy==3.3.0",
    "faker==23.2.1",
    "hypothesis==6.98.8",
    "freezegun==1.4.0",
    "responses==0.25.0",
    "respx==0.21.1",
    "pytest-playwright==0.4.4",
    "testcontainers==3.7.8",
    
    # Linting & Formatting
    "ruff==0.3.2",
    "mypy==1.8.0",
    "pre-commit==3.6.2",
    
    # Type Stubs
    "types-PyYAML==6.0.12.12",
    "types-python-dateutil==2.8.19.20240106",
    "types-requests==2.31.0.20240218",
    "types-beautifulsoup4==4.12.0.20240224",
    "types-redis==4.6.0.20240218",
    "types-python-jose==3.3.4.20240106",
    "types-passlib==1.7.7.20240103",
    "types-cachetools==5.3.0.7",
    "pandas-stubs==2.2.0.240218",
    
    # Documentation
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.11",
    "mkdocstrings[python]==0.24.0",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-section-index==0.3.8",
    
    # Development Tools
    "ipython==8.22.1",
    "ipdb==0.13.13",
    "debugpy==1.8.1",
    "watchdog==4.0.0",
    "psutil==6.0.0",
    "pyinstrument==4.6.2",
    "memray==1.11.0",
    "bandit==1.7.7",
    "safety==3.0.1",
    "pip-audit==2.7.2",
    
    # Jupyter
    "jupyter==1.0.0",
    "notebook==7.1.0",
    "nbval==0.11.0",
]

# Alternative dependency groups
elasticsearch = [
    "elasticsearch-dsl==8.12.0",
]

all = [
    "gabi[dev,elasticsearch]",
]

[project.scripts]
gabi = "gabi.cli:main"
gabi-server = "gabi.main:main"
gabi-worker = "gabi.worker:main"

[project.urls]
Homepage = "https://github.com/tcu/gabi"
Documentation = "https://docs.tcu.gov.br/gabi"
Repository = "https://github.com/tcu/gabi.git"
Issues = "https://github.com/tcu/gabi/issues"

# =============================================================================
# Tool Configurations
# =============================================================================

[tool.setuptools.packages.find]
where = ["src"]
include = ["gabi*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
gabi = [
    "py.typed",
    "templates/*.html",
    "templates/*.txt",
    "static/*",
]

# =============================================================================
# Ruff Configuration
# =============================================================================

[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E", "W",
    # McCabe complexity
    "C90",
    # isort
    "I",
    # pep8-naming
    "N",
    # pydocstyle
    "D",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-annotations
    "ANN",
    # flake8-async
    "ASYNC",
    # flake8-bandit (security)
    "S",
    # flake8-builtins
    "A",
    # flake8-commas
    "COM",
    # flake8-datetimez
    "DTZ",
    # flake8-docstrings
    "DOC",
    # flake8-errmsg
    "EM",
    # flake8-future-annotations
    "FA",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-logging
    "LOG",
    # flake8-no-pep420
    "INP",
    # flake8-pie
    "PIE",
    # flake8-print
    "T20",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-raise
    "RSE",
    # flake8-return
    "RET",
    # flake8-self
    "SLF",
    # flake8-slots
    "SLOT",
    # flake8-tidy-imports
    "TID",
    # flake8-type-checking
    "TC",
    # flake8-unused-arguments
    "ARG",
    # flake8-use-pathlib
    "PTH",
    # flake8-todos
    "TD",
    # flake8-fixme
    "FIX",
    # eradicate
    "ERA",
    # pandas-vet
    "PD",
    # refurb
    "FURB",
    # pylint
    "PL",
    # tryceratops
    "TRY",
    # flynt
    "FLY",
    # Perflint
    "PERF",
    # Ruff-specific rules
    "RUF",
]

ignore = [
    # Conflicts with FastAPI patterns
    "B008",
    # Docstring conventions - too strict for internal
    "D100", "D101", "D102", "D103", "D104", "D105", "D107",
    # Allow implicit optional (PEP 484 compatibility)
    "RUF013",
    # Allow print statements in CLI
    "T201",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true

[tool.ruff.lint.flake8-tidy-imports]
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"unittest".msg = "Use pytest instead of unittest"
"json".msg = "Use orjson or ujson for better performance"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D", "ANN", "PLR2004", "SLF001"]
"scripts/*" = ["S101", "D", "T201"]
"alembic/*" = ["D", "ANN"]
"docs/*" = ["D", "INP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["gabi"]
known-third-party = ["fastapi", "sqlalchemy", "celery", "elasticsearch"]
force-sort-within-sections = true
lines-between-types = 1
lines-after-imports = 2

# =============================================================================
# MyPy Configuration
# =============================================================================

[tool.mypy]
python_version = "3.11"
platform = "linux"

# Import discovery
mypy_path = ["src"]
namespace_packages = true
explicit_package_bases = true

# Disallow untyped definitions
strict = true

# Additional strictness
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true

# Warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Error output
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true

# Plugins
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Per-module overrides
[[tool.mypy.overrides]]
module = [
    "tests.*",
    "alembic.*",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "elasticsearch.*",
    "pdfplumber.*",
    "pymupdf.*",
    "playwright.*",
    "spacy.*",
]
ignore_missing_imports = true

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--color=yes",
    "--code-highlight=yes",
    "--import-mode=importlib",
    "-p no:warnings",
]

# Custom options for E2E tests
run_e2e = false

markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (requires services)",
    "e2e: End-to-end tests",
    "slow: Slow tests",
    "flaky: Flaky tests that may fail intermittently",
    "serial: Tests that must run serially (not in parallel)",
    "requires_db: Tests that require PostgreSQL",
    "requires_es: Tests that require Elasticsearch",
    "requires_redis: Tests that require Redis",
]

filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy.*:",
    "ignore::UserWarning:elasticsearch.*:",
]

# Coverage
[tool.coverage.run]
source = ["src/gabi"]
branch = true
parallel = true
concurrency = ["thread", "greenlet"]

[tool.coverage.paths]
source = ["src/", "/app/src/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
fail_under = 80
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# Bandit Configuration
# =============================================================================

[tool.bandit]
exclude_dirs = ["tests", "alembic", ".venv", "venv"]
skips = ["B101", "B601"]

# =============================================================================
# Semantic Versioning (for releases)
# =============================================================================

[tool.semantic_release]
version_variable = ["pyproject.toml:version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build"
dist_path = "dist/"
upload_to_release = false
upload_to_pypi = false
remove_dist = false
